<resources>
    <string name="app_name">Colossal Tracker</string>
    <string name="cancel">Cancel</string>
    <string name="confirmpassword">Confirm Password...</string>
    <string name="donthaveacc">Dont have an account? Click here to register</string>
    <string name="email">Email...</string>
    <string name="firstName">Firstname...</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password...</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="surname">Surname...</string>
    <string name="user_name">Username...</string>

    --Add Home Page
    <string name="homepage_title">Home Page</string>
    <string name="homepage_categorytitle">Categories</string>

    --Add Activity Page
    <string name="add_activity">Add Activity</string>
    <string name="add_activity_icon">Add Activity Icon?</string>
    <string name="title">Title</string>
    <string name="client">Client</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="duration">Duration (Hours)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_activity_header">Add Activity</string>
    <string name="repeat_activity">Will this Activity be repeated daily?</string>
    <string name="error_message">Error</string>
    --Add Category Page
    <string name="add_category_icon">Add Category Icon?</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_colour">Add Category Color</string>
    <string name="category_name">Category Name...</string>
    <string name="pick_start_date">Start Date</string>

    --Category Page
    <string name="category_header">Category</string>
    <string name="TotalHoursWorked">Total Hours Worked:</string>
    <string name="tv_Order">Order Now</string>
    <string name="filterActivities">Filter Activities</string>

    -- Capture Task Page
    <string name="activity">Activity</string>
    <string name="activity_current_date">Current Date:</string>
    <string name="capture_text">CAPTURE</string>
    <string name="max_time">Max Time: %.2f minutes</string>
    <string-array name="timeformat_array">
        <item>Hrs</item>
        <item>Min</item>
    </string-array>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>>

    -- Account Settings
    <string name="account_settings_heading">Account Settings</string>
    <string name="edit_profile_icon">Edit Profile Icon?</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="min_hrs">Minimum hrs/day</string>
    <string name="max_hrs">Maximum hrs/day</string>
    <string name="update_settings">Update Settings</string>
    <string-array name="min_time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="max_time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="profile_email">Email..</string>
    <string name="profile_username">Username..</string>
    <string name="profile_first_name">Firstname..</string>
    <string name="profile_surname">Surname..</string>
    <string name="profile_password">Password</string>


</resources>