<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="323dp"
            android:layout_height="108dp"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">


            <ImageView
                android:id="@+id/imgColossal"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/colossal"
                android:layout_marginRight="16dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="94dp"
                app:srcCompat="@drawable/time_tracker_icon"/>

            <ImageView
                android:id="@+id/imgTracker"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/tracker"
                android:layout_marginLeft="16dp"/>

        </LinearLayout>



        <TextView
            android:layout_width="102dp"
            android:layout_height="105dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/default_background"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/txt_color"
                android:textColorHighlight="@color/txt_color"
                android:textColorHint="@color/txt_color"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/default_background"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/txt_color"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/forgotpassword"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button1"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFFBF6" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/donthaveacc"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>

</RelativeLayout>