<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="323dp"
            android:layout_height="111dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgColossal"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="2"
                app:srcCompat="@drawable/colossal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/time_tracker_icon" />

            <ImageView
                android:id="@+id/imgTracker"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/tracker"
                android:layout_marginLeft="16dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="102dp"
            android:layout_height="105dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/default_background"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="@color/txt_color"
                android:textColorHighlight="@color/txt_color"
                android:textColorHint="@color/txt_color"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/default_background"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/txt_color"
                android:textColorHighlight="@color/txt_color"
                android:textColorHint="@color/txt_color"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Firstname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="15dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/default_background"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:hint="@string/firstName"
                    android:inputType="text"
                    android:textColor="@color/txt_color"
                    android:textColorHighlight="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textStyle="italic" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Surname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="15dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/default_background"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:hint="@string/surname"
                    android:inputType="text"
                    android:textColor="@color/txt_color"
                    android:textColorHighlight="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textStyle="italic" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/default_background"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/txt_color"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/confirmpassword"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/default_background"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/txt_color"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button1"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#FFFBF6"
                android:layout_marginRight="45dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#FFFBF6"
                android:layout_marginLeft="45dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>